Remove AppBundle, reworked script for flatpickr, start work on boot page
#Need to fix book.html.twig rendering (WIP)

--- a/src/OC/BookingBundle/Resources/config/routing.yml
+++ b/src/OC/BookingBundle/Resources/config/routing.yml
@@ -3,5 +3,5 @@ oc_booking_homepage:
     defaults: { _controller: OCBookingBundle:Default:index }
 
 oc_booking_recap:
-    path: /booking/{id}
+    path: /order/{id}
     defaults: { _controller: OCBookingBundle:Booking:book}
