Fixed Ticket submit, reworked booking view

--- a/src/OC/BookingBundle/Resources/config/routing.yml
+++ b/src/OC/BookingBundle/Resources/config/routing.yml
@@ -5,3 +5,7 @@ oc_booking_homepage:
 oc_booking_recap:
     path: /order/{id}
     defaults: { _controller: OCBookingBundle:Booking:book}
+
+oc_booking_checkout:
+    path: /checkout/{id}
+    defaults: { _controller: OCBookingBundle:Booking:checkout}
