Add booking service, worked on checkout view
#Need to fix total price display for multiple tickets

--- a/src/OC/BookingBundle/Resources/config/routing.yml
+++ b/src/OC/BookingBundle/Resources/config/routing.yml
@@ -5,7 +5,11 @@ oc_booking_homepage:
 oc_booking_recap:
     path: /order/{id}
     defaults: { _controller: OCBookingBundle:Booking:book}
+    requirements:
+      id: \d+
 
 oc_booking_checkout:
     path: /checkout/{id}
     defaults: { _controller: OCBookingBundle:Booking:checkout}
+    requirements:
+      id: \d+
