--- a/src/OC/BookingBundle/Resources/config/services.yml
+++ b/src/OC/BookingBundle/Resources/config/services.yml
@@ -1,4 +1,6 @@
 services:
-#    oc_booking.example:
-#        class: OC\BookingBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+    _defaults: {public: true}
+
+    oc_bookingbundle.handler:
+      class: OC\BookingBundle\Services\Handler
+      public: true
