--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,7 +67,7 @@ swiftmailer:
     host: '%mailer_host%'
     username: '%mailer_user%'
     password: '%mailer_password%'
-    spool: { type: memory }
+    encryption: 'ssl'
 
 sensio_framework_extra:
    router:
