Add redirecion after billing, add test method & view
#Need to fix mail sending & html format for emails

--- a/src/OC/BookingBundle/Resources/config/routing.yml
+++ b/src/OC/BookingBundle/Resources/config/routing.yml
@@ -13,3 +13,7 @@ oc_booking_checkout:
     defaults: { _controller: OCBookingBundle:Booking:checkout}
     requirements:
       id: \d+
+
+oc_test_mail:
+    path: /mail/{id}
+    defaults: {_controller: OCBookingBundle:Default:mail}
