--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,6 +67,7 @@ swiftmailer:
     host: '%mailer_host%'
     username: '%mailer_user%'
     password: '%mailer_password%'
+    auth_mode: "%mailer_auth_mode%"
     encryption: 'ssl'
 
 sensio_framework_extra:
